# LibCMaker_wxWidgets

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md  cmr_build_wxwidgets.cmake  lib_cmaker_wxwidgets.cmake
.github/workflows/: LibCMaker_CI.yml
ci/: ci_lib_params.sh
cmake/: FindwxWidgets.cmake  cmr_build_rules_wxwidgets.cmake  cmr_find_package_wxwidgets.cmake  cmr_find_package_wxwidgets_custom.cmake  cmr_get_download_params_wxwidgets.cmake  cmr_wx_option.cmake
cmake/modules/: FindwxWidgets.cmake  build_cmake_files-3.1.0.cmake  cmr_build_rules_wxwidgets.cmake  cmr_wx_option.cmake  cmr_wxwidgets_cmaker.cmake  cmr_wxwidgets_get_download_params.cmake
example/TestCompileWithWxWidgets/: CMakeLists.txt  README.md
samples/TestCompileWithWxWidgets/: CMakeLists.txt
samples/TestCompileWithWxWidgets/src/: example_test.cpp
samples/TestCompileWithWxWidgets/test/: CMakeLists.txt
samples/TestCompileWithwxWidgets/: CMakeLists.txt  README.md
samples/TestCompileWithwxWidgets/test/: CMakeLists.txt
